add google auth and add hero,search,gamelist components

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_CLIENT_ID=264181169039-reokde4kijurgkf7qhparqalc7rvkkr8.apps.googleusercontent.com,
+GOOGLE_CLIENT_ID=264181169039-reokde4kijurgkf7qhparqalc7rvkkr8.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
